<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp">


    <TextView
        android:id="@+id/tvDepartureTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="18:18" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >
        <TextView
            android:id="@+id/vTrainLabel"
            android:textAlignment="center"
            android:layout_width="60dp"
            android:layout_height="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/train_intercity_background"
            android:text="@string/intercity"
            android:textSize="6sp"
            android:textStyle="italic"
            android:textColor="@color/white"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/budapest_nyugati"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:textSize="11sp"
        />

    <ImageView
        android:contentDescription="@string/small_black_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="4dp"
        android:layout_marginTop="3dp"
        android:src="@drawable/ic_arrow_right_black_24dp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/cegl_d"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:textSize="11sp"
        />




    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        tools:text="18:18" />

</LinearLayout>
